# apitrace

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/debugger/: CMakeLists.txt  debugger.cpp  debugger.hpp  dumper.cpp  dumper.hpp  model_fingerprints_window.cpp  model_fingerprints_window.hpp  model_instance_details_window.cpp  model_instance_details_window.hpp  model_instances_window.cpp  model_instances_window.hpp
lib/interceptor/: CMakeLists.txt  base64.hpp  debugger.cpp  debugger.hpp  dumper.cpp  dumper.hpp  helpers.cpp  helpers.hpp  model_fingerprint.cpp  model_fingerprint.hpp  model_instance.cpp  model_instance.hpp  models_fingerprints.hpp  state_manager.cpp  state_manager.hpp  types.hpp
lib/shaders/: CMakeLists.txt  instruction.hpp  instruction_components.hpp  main.cpp  operations.hpp  vertex_shader.cpp  vertex_shader.hpp  vertex_shader_simulator.cpp  vertex_shader_simulator.hpp
lib/trace/: trace_writer_noop.hpp
retrace/: CMakeLists.txt
test_debugger/: CMakeLists.txt  main.cpp
test_debugger/shaders/: triangle.vert.hlsl
wrappers/: CMakeLists.txt  dxgiinterceptor.py
